# BitKernels

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  bench.cpp  bench.sh  bitlinear.h  bitlinear.py  build.sh  run.sh  test.cpp  test.sh  validate.sh
benchmarks/: bench_bitlinear.cpp
include/bitkernels/: bitlinear.h  types.h
kernels/: bitlinear.cpp  bitlinear_profiled.cpp
python/: pyproject.toml  setup.py
python/bitkernels/: _C.cpp  __init__.py
src/bitlinear/: dispatch.cpp  prepare_weights.cpp
src/bitlinear/arm_neon/: gemm.cpp  gemv.cpp
src/bitlinear/common/: gemm.cpp  gemv.cpp
src/common/: types.cpp  utils.h
tests/cpp/: test_bitlinear.cpp
